# ndx

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SPEC-v0.2.0.md  install.sh
.claude/commands/: ndx.md
.github/workflows/: ci.yml  release.yml
docs/specs/: recall.md
src/: client.rs  daemon.rs  index.rs  install.rs  main.rs  scanner.rs  server.rs  tokens.rs  trigram.rs  watcher.rs
src/hook/: context.rs  filter.rs  manifest.rs  mod.rs  parser.rs
src/memory/: agent.rs  event.rs  mod.rs  session.rs  transcript.rs  xref.rs
src/recall/: bm25.rs  embed.rs  error.rs  identity.rs  issue.rs  mine.rs  mod.rs  search.rs
