[package]
name = "ndx"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "0.15", features = ["server", "transport-io", "schemars"] }
redb = "3"
notify = "8"
ignore = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
globset = "0.4"
grep-searcher = "0.1"
grep-regex = "0.1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
