[package]
name = "ndx"
version = "0.6.1"
edition = "2021"

[dependencies]
redb = "3"
notify = "8"
ignore = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
globset = "0.4"
grep-searcher = "0.1"
grep-regex = "0.1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
regex = "1"
dirs = "6"
rayon = "1"
ureq = "2"
blake3 = "1"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
fastembed = "4"

[dev-dependencies]
tempfile = "3"
